move calls that don't require authentication to its own /syncx handler
